# norman_core_sdk_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  norman_config.json  vcpkg.json
cmake/: normancoresdkConfig.cmake.in
include/norman/clients/: http_client.hpp
include/norman/objects/services/authenticate/: login.hpp  login_response.hpp  register.hpp  signup.hpp
include/norman/objects/shared/accounts/: account.hpp
include/norman/services/authenticate/: login.hpp  register.hpp  signup.hpp
include/norman/utils/: json_config.hpp
src/: http_client.cpp
src/objects/services/authenticate/: login_response.cpp
src/objects/shared/accounts/: account.cpp
src/services/authenticate/: login.cpp  register.cpp  signup.cpp
src/utils/: json_config.cpp
